--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -1,6 +1,5 @@
-doctype html
-html(lang="ru")
-    head
-        title Главная страница сайта
-    body
-        h1 Привет
+extends ../layouts/default
+
+block content
+  main.main
+    include ../components/section/section
