--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -13,9 +13,10 @@
   transition-duration: var(--transition-duration);
 }
 
+
 /* Header */
 
-.header {
+/* .header {
   padding: 0 20px;
   position: relative;
 }
@@ -189,7 +190,7 @@
   .header__subtitle {
     width: 100%;
   }
-}
+} */
 
 /* Main content */
 
@@ -211,7 +212,7 @@
   }
 }
 
-.section {
+/* .section {
   line-height: 130%;
 }
 
@@ -220,13 +221,13 @@
   font-size: 18px;
   font-weight: 700;
   color: var(--section-title-color);
-}
+} */
 
 .dark-title {
   color: var(--article-title-color);
 }
 
-@media (width < 1024px) and (width >= 768px) {
+/* @media (width < 1024px) and (width >= 768px) {
 
   .section__title {
     width: 35%;
@@ -437,11 +438,11 @@
     flex-direction: column;
     gap: 10px;
   }
-}
+} */
 
 /* Footer */
 
-.footer {
+/* .footer {
   padding: 282px 20px;
   position: relative;
   text-align: center;
@@ -481,4 +482,4 @@
     margin-top: 40px;
     padding: 262px 10px;
   }
-}
+} */
