--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -223,9 +223,9 @@
   color: var(--section-title-color);
 } */
 
-.dark-title {
+/* .dark-title {
   color: var(--article-title-color);
-}
+} */
 
 /* @media (width < 1024px) and (width >= 768px) {
 
