--- a/src/components/articles/article-type-one/article.pug
+++ b/src/components/articles/article-type-one/article.pug
@@ -13,7 +13,7 @@ article.section__article-item
     ошибаемся и быстро устаём.
 article.section__article-item
   h3.section__article-title.title-decor Дофамин
-  p.section__article-tex.
+  p.section__article-text.
     С гормонами стресса всё понятно, но дальше — ещё интереснее. В
     нашей невозможности сосредоточиться замешана и полная
     противоположность стрессу — дофамин. Это вещество участвует в
@@ -22,3 +22,7 @@ article.section__article-item
     смотрим лайки в соцсетях. В это время и выделяется дофамин — и мы
     чувствуем удовольствие. Получается замкнутый круг: чем больше
     отвлекаешься, тем больше удовольствия получаешь.
+mixin cardFirst(title, text)
+  h3.section__article-title.title-decor= title
+  p.section__article-text= text
+  
