--- a/src/components/section/section.pug
+++ b/src/components/section/section.pug
@@ -1,19 +1,165 @@
+block variables
+  - var title = 'header';
+  - 
+    var cardsDataFirstBlock = [
+      {
+        'title': 'Многозадачность',
+        'textLink': `
+          Особенно сложно сосредоточиться, когда задач много и все они —
+          важные. Где же легендарная многозадачность, когда она так нужна
+          вам (и всем нанимающим менеджерам этого мира)? А дело в том, что
+          её просто не существует. Исследователи
+          <a
+            href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328"
+            target="_blank"
+            class="section__article-text-link"
+            >выяснили</a>, что мозгу тяжело концентрироваться даже на двух делах
+          одновременно. А когда в поле внимания попадает несколько важных
+          задач, организм паникует и выделяет кортизол и адреналин —
+          «гормоны стресса». Из-за этого мы работаем невнимательно:
+          ошибаемся и быстро устаём.
+        `},
+      {'title': 'Дофамин', 'text': 'С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей невозможности сосредоточиться замешана и полная противоположность стрессу — дофамин. Это вещество участвует в системе вознаграждения мозга. Причём тут он? Мы часто отвлекаемся от важной задачи на что-то более «приятное» для мозгов. Например,смотрим лайки в соцсетях. В это время и выделяется дофамин — и мы чувствуем удовольствие. Получается замкнутый круг: чем больше отвлекаешься, тем больше удовольствия получаешь.'}
+    ];
+  - 
+    var cardsDataSecondBlock = [
+      {
+        'title': 'Многозадачность', 
+        'text': `
+          Как концентрация может снижаться из-за… концентрации? Любая
+          стрессовая ситуация (и резко меняющийся мир в целом) заставляет
+          наш мозг постоянно «сканировать» окружающую среду на предмет
+          опасности. Например, читать новости вместо работы. Но быть
+          собранными всё время — невозможно. Концентрация — мышца, и она
+          может не выдержать, если не давать ей отдохнуть.
+        `
+      },
+      {
+        'title': 'Еда', 
+        'text': `
+          «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно
+          доставляют в мозг энергию и помогают ему лучше работать. Но уходит
+          эта энергия также быстро, как и приходит. А мы в результате
+          попадаем на «углеводные качели»: как только действие «быстрых
+          углеводов» заканчивается, мы чувствуем усталость и сонливость. И
+          хотим ещё больше быстрых углеводов.
+        `
+      },
+      {
+        'title': 'Гаджеты', 
+        'text': `
+          Да-да, это та самая ситуация, когда на экране ноутбука — код, в
+          наушниках — подкаст, а на компьютере фоном — ещё и видео с
+          забавными утятами. В результате мозг пытается переключиться с
+          одной задачи на другую — и просто не может. А чтобы вернуться к
+          состоянию полной концентрации, человеку в среднем нужно 20 минут.
+          Вот и получается, что чем больше времени мы проводим в гаджетах,
+          тем больше времени затем нужно, чтобы вернуться к работе.
+        `
+      },
+    ];
+  - 
+    var cardsDataThirdBlock = [
+      {
+        'type': 'regular',
+        'title': 'Представьте небо и облака', 
+        'text': `
+          Или листья в ручье. Тут дело в лёгкой медитации, которая помогает
+          успокоиться. Ведь часто именно тревожные мысли о сложных задачах
+          как раз и мешают эти сложные задачи делать. В такие моменты можно
+          закрыть глаза и представить, что чистое небо — это вы, а облака —
+          тревожные мысли. И сколько бы их ни было — ясное небо всегда будет
+          где-то там, за тучами, и никуда не денется. Это упражнение поможет
+          вернуться в настоящий момент, а не волноваться о потенциальных
+          проблемах из будущего.
+        `
+      },
+      {
+        'type': 'regular',
+        'title': 'Включите музыку', 
+        'text': `
+          Но не любую, и не любимую. Любимая может быть связана с сильными
+          положительными эмоциями, которые тоже очень сильно отвлекают.
+          Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще
+          попробовать включить плейлист в «белым шумом» или нейромузыкой.
+        `
+      },
+      {
+        'type': 'regular',
+        'title': 'Прогуляйтесь', 
+        'textLink': `
+          Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
+          <a
+            href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328"
+            target="_blank"
+            class="section__article-text-link"
+            >показал</a>, что созерцание природы повышает концентрацию, в то время как
+          после просмотра городских пейзажей она наоборот понижается. Можно
+          совместить прогулку с физическими упражнениями или бегом — так в
+          мозг поступит ещё больше кислорода и он будет лучше работать. Но и
+          простая двадцатиминутная прогулка — тоже отличный вариант.
+        `
+      },
+      {
+        'type': 'regular',
+        'title': 'Хорошо ешьте', 
+        'text': `
+          Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
+          которые препятствуют резким скачкам сахара в крови. Например, с
+          высоким содержанием клетчатки: овощи, ягоды, бобовые (нут,
+          чечевица, фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.
+        `
+      },
+      {
+        'type': 'regular',
+        'title': 'Читайте', 
+        'text': `
+          Настоящие бумажные книги. Это правда помогает с концентрацией:
+          чтобы прочитать пост в соцсети, достаточно нескольких минут или
+          даже секунд. А вот интересная книга способна затянуть и на
+          несколько часов и круто тренирует направленное внимание.
+        `
+      },
+    ]
+  - 
+    var cardsDataFourthBlock = [
+      {'image': './images/sunset.png', 'alt': 'Закат'},
+      {'image': './images/ice-cream.png', 'alt': 'Мороженное'},
+      {'image': './images/tape.png', 'alt': 'Кассета'},
+      {'image': './images/books.png', 'alt': 'Книги'},
+      {'image': './images/street.png', 'alt': 'Улица'},
+    ]
+
 section.section
   h2.section__title Почему сосредоточиться так сложно
   div.section__article-list
-    include ../articles/article-type-one/article
+    include ../card/card
+    each card in cardsDataFirstBlock
+      if card.textLink
+        +cardWithLink(card.title, card.textLink)
+      else
+        +card(card.title, card.text)
 section.section
   h2.section__title Что снижает концентрацию внимания?
   div.section__article-list
-    include ../articles/article-type-two/article
+    include ../card/card
+    each card in cardsDataSecondBlock
+      if card.textLink
+        +cardWithLink(card.title, card.textLink)
+      else
+        +card(card.title, card.text)
 section.section
   h2.section__title Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёхсекунд)
   div.section__article-list
-    include ../articles/article-type-three/article
+    h2.section__article-list-title.title-decor 5 простых (на самом деле не очень) советов
+    include ../card/card
+    each card in cardsDataThirdBlock
+      if card.textLink
+        +cardWithLink(card.title, card.textLink, card.type)
+      else
+        +card(card.title, card.text, card.type)
 section.section
-  h2.section__title.dark-title.title-decor А можно в картинках?
-  img.section__image(src="./images/sunset.png", alt="Закат", loading="lazy")
-  img.section__image(src="./images/ice-cream.png", alt="Мороженное", loading="lazy")
-  img.section__image(src="./images/tape.png", alt="Кассета", loading="lazy")
-  img.section__image(src="./images/books.png", alt="Книги", loading="lazy")
-  img.section__image(src="./images/street.png", alt="Улица", loading="lazy")
+  h2.section__title.title-decor.dark-title А можно в картинках?
+  include ../card/card
+  each card in cardsDataFourthBlock
+    +cardImage(card.image, card.atl)
