--- a/src/layouts/default.pug
+++ b/src/layouts/default.pug
@@ -7,11 +7,11 @@ html(lang="ru")
     meta(http-equiv="X-UA-Compatible", content="IE=edge")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     meta(name="color-scheme", content="dark light")
-    title Сложно сосредоточиться
+    title= title
     link(rel="stylesheet", href="styles.css")
   body.page
     include ../components/header/header
     block content
     include ../components/footer/footer
-    script(src="./js/main.min.js") 
+    script(src="./js/main.min.js", defer) 
 
