--- a/src/styles/light.css
+++ b/src/styles/light.css
@@ -5,7 +5,7 @@
   Здесь окажутся стили, которые нужно переопределить принудительно,
   переключая тему
 */
-
+/* 
 .page.theme_light {
   --main-text-color: #353430;
   --title-color: #ffc2e6;
@@ -24,4 +24,4 @@
 
 .page.theme_light .header__rec {
   display: none;
-}
+} */
