--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -19,7 +19,7 @@
 }
 
 @media (width < 768px) and (width >= 375px) {
-  
+
   .header__rec {
     top: 11px;
     right: 39px;
@@ -27,7 +27,7 @@
 }
 
 .header__rec::after {
-  content: "";
+  content: '';
   position: absolute;
   width: 10px;
   height: 10px;
